# MAC_Codec_661_linux

./: CMakeLists.txt  build_mac.sh  compress_demo.cpp  compress_demo1.cpp  compress_demo2.cpp  conf.sh  decompress_demo1.cpp  decompress_demo2.cpp  ffplay_using.txt  note.md  sample1.cpp  test.out
Shared/: APETag.h  All.h
Source/: CMakeLists.txt
Source/Console/: Console.cpp
Source/MACDll/: MACDll.cpp
Source/MACLib/: APECompress.cpp  APECompress.h  APECompressCore.cpp  APECompressCore.h  APECompressCreate.cpp  APECompressCreate.h  APEDecompress.cpp  APEHeader.cpp  APEInfo.cpp  APEInfo.h  APESimple.cpp  APETag.cpp  APETag.h  BitArray.cpp  BitArray.h  MACLib.cpp  MACLib.h  NNFilter.cpp  NNFilter.h  NewPredictor.cpp  NewPredictor.h  Predictor.h  Prepare.cpp  Prepare.h  UnBitArray.cpp  UnBitArray.h  UnBitArrayBase.cpp  UnBitArrayBase.h  WAVInputSource.cpp
Source/MACLib/Old/: UnBitArrayOld.cpp
Source/Projects/NonWindows/: Makefile  libMAC.so.8  mac
Source/Projects/VS2022/Console/: Console.vcxproj
Source/Projects/VS2022/DirectShow Filter/: APE Decoder.vcxproj
Source/Projects/VS2022/MAC/: MAC.vcxproj
Source/Projects/VS2022/MACDll/: MACDll.vcxproj
Source/Projects/VS2022/MACLib/: MACLib.vcxproj
Source/Shared/: APEInfoDialog.cpp  All.h  GlobalFunctions.cpp  MACDll.h  RollBuffer.h  StdLibFileIO.cpp  Version.h  WinFileIO.cpp  WindowsEnvironment.h
Source/utils/: logs.h
additional/: CMakeLists.txt  linux_alsa.c  wav.h
extension_build/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
extension_build/.cmake/api/v1/reply/: cache-v2-452077e5e8c4ed81a545.json  codemodel-v2-6585b846608364d46cf8.json  index-2022-01-10T14-04-57-0001.json  target-MAC-Debug-dbd44a18ab6d23d6c9ca.json  target-MAC_STATIC-Debug-91bbb0a92e2315b76585.json  target-test-Debug-b455a5aa0822312b75a5.json
extension_build/Source/: cmake_install.cmake
rice_coding/: decoding.cpp  encoding.cpp
test/: 16Hz-1600Hz-Exp-1f-10sec.ape  CAPEInfo.dot  CMakeLists.txt  IAPEDecompress.dot  UML.dot  a.out  build_sh.sh  new_0.cpp  sizeof_dtype.cpp
